--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Schoffer_Robert</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Schoffer_Robert</title>
+  </head>
+  <body>
+    <p>My page</p>
+  </body>
 </html>
