--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-        <div class="header"></div>
+        <h2>Hello</h2>
+        <h1>I'm Róbert Schöffer</h1>
+        <h3>a Front-end developer</h3>
     </header>
 
 
