--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
   <body>
     <header>
       <a class="logo" href="mailto:robeszpierre@gmail.com" target="_blank">Email</a>
-        <h2>Hello</h2>
-        <h1>I'm Róbert Schöffer</h1>
-        <h3>a Front-end developer</h3>
+      <p class="mailCaption">Contact me!</p>
+      <h2>Hello</h2>
+      <h1>I'm Róbert Schöffer</h1>
+      <h3>a Front-end developer</h3>
     </header>
 
+    <div id="root">
+        <div id="root_footer"></div>
+      </div>
+      <div id="footer">
+        Footer content goes here.
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="js.js" ></script>
+    <script src="js/js.js" ></script>
   </body>
 </html>
