--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
     <header>
       <a class="logo" href="mailto:robeszpierre@gmail.com" target="_blank">Email</a>
       <p class="mailCaption">Contact me!</p>
@@ -15,6 +16,11 @@
       <h1>I'm Róbert Schöffer</h1>
       <h3>a Front-end developer</h3>
     </header>
+
+    <div class="introduce">
+        <h3>My focus is on to write quality code with the most modern technologies.</h3>
+    </div>
+
 
     <div id="root">
         <div id="root_footer"></div>
