--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-
+<div class="wrapper">
     <header>
       <a class="logo" href="mailto:robeszpierre@gmail.com" target="_blank">Email</a>
       <p class="mailCaption">Contact me!</p>
@@ -20,14 +20,15 @@
     <div class="introduce">
         <h3>My focus is on to write quality code with the most modern technologies.</h3>
     </div>
+</div>
 
 
-    <div id="root">
-        <div id="root_footer"></div>
-      </div>
-      <div id="footer">
-        Footer content goes here.
-      </div>
+    <footer>
+      <ul class="social">
+        <li><a href="https://github.com/Robeszpierre" target="blank" class="icon-mark-github">Github</a></li>
+        <li><a href="https://www.facebook.com/robert.schoffer" target="blank" class="icon-facebook">Facebook</a></li>
+      </ul>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="js/js.js" ></script>
