--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
         <h3>My focus is on to write quality code with the most modern technologies.</h3>
     </div>
 </div>
-
-
     <footer>
       <ul class="social">
         <li><a href="https://github.com/Robeszpierre" target="blank" class="icon-mark-github">Github</a></li>
         <li><a href="https://www.facebook.com/robert.schoffer" target="blank" class="icon-facebook">Facebook</a></li>
+        <li><a href="https://teamtreehouse.com/rbertschffer" target="blank" class="icon-treehouse">Treehouse</a></li>
       </ul>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
