--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-<div class="wrapper">
+<div class="page-wrap">
     <header>
       <a class="logo" href="mailto:robeszpierre@gmail.com" target="_blank">Email</a>
       <p class="mailCaption">Contact me!</p>
@@ -21,11 +21,11 @@
         <h3>My focus is on to write quality code with the most modern technologies.</h3>
     </div>
 </div>
-    <footer>
+    <footer class="site-footer">
       <ul class="social">
         <li><a href="https://github.com/Robeszpierre" target="blank" class="icon-mark-github">Github</a></li>
         <li><a href="https://www.facebook.com/robert.schoffer" target="blank" class="icon-facebook">Facebook</a></li>
-        <li><a href="https://teamtreehouse.com/rbertschffer" target="blank" class="icon-treehouse">Treehouse</a></li>
+        <li><a href="https://teamtreehouse.com/rbertschffer" target="blank" class="icon-treehouse">T</a></li>
       </ul>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
